# deno-lol-html

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ts  deno.json  lol_html.js  lol_html.wasm  mod.js  mod.ts  test.js  test.ts  types.d.ts  version.ts  wasm.js
src/: comment.rs  doctype.rs  document_end.rs  element.rs  handlers.rs  html_rewriter.rs  lib.rs  text_chunk.rs
