[package]
name = "deno-lol-html"
version = "0.0.6"
description = "Low output latency streaming HTML parser/rewriter with CSS selector-based API in Deno, via Webassembly."
repository = "https://github.com/ije/deno-lol-html"
authors = ["ije"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.60"
lol_html = "0.3.2"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"
thiserror = "1.0.38"
encoding_rs = "0.8.31"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true