[package]
name = "deno-lol-html"
version = "0.1.0"
description = "Low output latency streaming HTML parser/rewriter with CSS selector-based API in Deno, via Webassembly."
repository = "https://github.com/ije/deno-lol-html"
authors = ["ije"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.66"
lol_html = "1.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.89"
thiserror = "1.0.51"
encoding_rs = "0.8.33"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
